UP: upgrade swagger, add route favorite
